products/build-intelligence/deploy/k8s/overlays/staging/patch-backend-infra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: build-intelligence-backend
spec:
  template:
    spec:
      containers:
        - name: build-intelligence-backend
          imagePullPolicy: IfNotPresent
